# mongo-learn

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/api/: main.py
src/api/tasks/: schemas.py  views.py
src/database/: models.py
