[project]
name = "to-do-mongo"
version = "0.1.0"
description = ""
authors = [
    {name = "Vsevolod Enushkevich",email = "65215566+c1kvoy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beanie (>=1.30.0,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
